--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 To run the app:
 
-1. Import the osis.sql database into phpmyadmin.
-2. Install WAMP/MAMP/LAMP/XAMPP.
-3. Copy and paste osis folder into XAMPP's directory: htdocs for mac; www folder for WAMP. 
-4. Run webserver and visit http://localhost:8888/osis/login.php (This URL will be different depending on webserver installation).
-5. username and password are both "admin".
+1. Create a new database named 'osis' in phpmyadmin.
+2. Import the osis.sql database into phpmyadmin.
+3. Install WAMP/MAMP/LAMP/XAMPP.
+4. Copy and paste osis folder into XAMPP's directory: htdocs for mac; www folder for WAMP. 
+5. Run webserver and visit http://localhost:8888/osis/login.php (This URL will be different depending on webserver installation).
+6. username and password are both "admin".
 
